@@ -26,7 +26,7 @@
 .form--field.form--slick .form-item {
   border-bottom: 1px solid #e7e7e7;
   border-left: 1px solid #e7e7e7;
-  border-top: 1px solid #fff;
+  border-top: 0;
   margin: 0;
   padding: 20px 10px 12px;
 }
@@ -79,12 +79,15 @@
   .form--field.form--slick .form-item {
     display: block;
     float: left;
+    margin: 0;
     padding: 20px 0 12px;
     width: 49.8888%; /* Fix for UNIX rounding margin */
   }
 
   .form--field.form--slick .form-checkboxes,
   .form--field.form--slick .form-type-checkboxes {
+    margin: 0;
+    padding: 0;
     width: 100%;
   }
 
